# Phase-Change-Problems

./: .gitignore
PhaseFieldModeling/Solidification1D-Stefan/: .gitignore  CMakeLists.txt  main.cpp
PhaseFieldModeling/Solidification1D-Stefan/explicit/: CMakeLists.txt  main.cpp
PhaseFieldModeling/Solidification1D-Stefan/imex/: main.cpp
PhaseFieldModeling/Solidification1D-Stefan/implicit/: CMakeLists.txt  main.cpp
PhaseFieldModeling/Solidification1D-Stefan/implicit/include/: Assembler.hpp  Assembler.tpp  ElementEvaluator.hpp  ElementEvaluator.tpp  Mesh.tpp  MeshGenerator.hpp  Solver.hpp  Solver.tpp
PhaseFieldModeling/Solidification1D-Stefan/implicit/mesh/: elems.txt  points.txt
Stefan1D/: points.txt  run.sh  stefan1D  stefan1D-1Phase.cpp
Stefan1D/solutions/: solution_t_0.out  solution_t_1.out  solution_t_10.out  solution_t_100.out  solution_t_101.out  solution_t_102.out  solution_t_103.out  solution_t_104.out  solution_t_105.out  solution_t_106.out  solution_t_107.out  solution_t_108.out  solution_t_109.out  solution_t_11.out  solution_t_110.out  solution_t_111.out  solution_t_112.out  solution_t_113.out  solution_t_114.out  solution_t_115.out  solution_t_116.out  solution_t_117.out  solution_t_118.out  solution_t_119.out  solution_t_12.out  solution_t_120.out  solution_t_121.out  solution_t_122.out  solution_t_123.out  solution_t_124.out  solution_t_125.out  solution_t_126.out  solution_t_127.out  solution_t_128.out  solution_t_129.out  solution_t_13.out  solution_t_130.out  solution_t_131.out  solution_t_132.out  solution_t_133.out  (+960 more)
(+31 files in other folders)
