cmake_minimum_required(VERSION 3.10)
project(MyProject LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Include headers
include_directories("include")
include_directories("/home/grathod/Downloads/eigen-5.0.0/eigen-5.0.0") #include Eigen headers
# include_directories("/mnt/c/Users/ratho/Downloads/eigen-5.0.0/eigen-5.0.0") #include Eigen headers

# Gather all source files
file(GLOB SOURCES "src/*.cpp")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -g -march=native")

# Add executable with main.cpp + all src files
add_executable(main main.cpp ${SOURCES})

# Link curl
target_link_libraries(main PRIVATE curl)
